--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
 
           <p class="w3-large w3-text-theme color4"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-          <p class="color4">Pesrin</p>
+          <p class="color4">Persian</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
           </div>
@@ -108,7 +108,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container w3-card w3-white">
           <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
           <div class="w3-container">
-            <h5 class="w3-opacity"><b>Shahed Imam Hossein Hight School</b></h5>
+            <h5 class="w3-opacity"><b>Shahed Imam Hossein High School</b></h5>
             <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>OCT 2012 - SEP 2016</h6>
             <p>Mathematics and Physics - GPA: 18.01</p>
             <hr>
